--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -7,11 +7,9 @@
     "page.error.pageTitle": "Noe gikk galt ...",
     "page.form.ubesvarteSpørsmålInfo": "For å komme videre, må du svare på alle spørsmålene ovenfor",
 
-    "page.ikkeMyndig.sidetittel": "Søknad om ekstra omsorgsdager",
-    "page.ikkeMyndig.banner.tittel": "Hei!",
-    "page.ikkeMyndig.banner.tekst": "Fordi du er under 18 år, må en av foreldrene dine eller en foresatt skrive under på søknaden sammen med deg. Du må derfor fylle ut søknaden på papir og sende den i posten.",
-    "page.ikkeMyndig.banner.lastNed": "Søknad om ekstra omsorgsdager",
-    "page.ikkeMyndig.tittel": "Søknad om ekstra omsorgsdager",
+    "page.ikkeTilgang.sidetittel": "Søknad om ekstra omsorgsdager",
+    "page.ikkeTilgang.tekst": "Du har ikke tilgang til denne siden. Dersom du er under 18 år, må en av foreldrene dine eller en foresatt skrive under på søknaden sammen med deg. Du må derfor fylle ut søknaden på papir og sende den i posten.",
+    "page.ikkeTilgang.lastNed": "Søknad om ekstra omsorgsdager",
 
     "arbeidstaker": "arbeidstaker",
 
