--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -20,11 +20,11 @@
     "validationText.mer_1000_bokstaver": "Du kan skrive max 1000 tegn",
     "validationText.barn_ikke_registrert": "Du må legge til minst ett barn for å fortsette",
 
-    "grunn.sykdom": "Sykdom, skade eller funksjonhemming",
-    "grunn.innlagtIHelseinstitusjon": "Innlagt i helseinstitusjon",
-    "grunn.fengsel": "Fengsel",
-    "grunn.utøverVerneplikt": "Utøver verneplikt",
-    "grunn.annet": "Annet",
+    "grunn.SYKDOM": "Sykdom, skade eller funksjonhemming",
+    "grunn.INNLAGT_I_HELSEINSTITUSJON": "Innlagt i helseinstitusjon",
+    "grunn.FENGSEL": "Fengsel",
+    "grunn.UTØVER_VERNEPLIKT": "Utøver verneplikt",
+    "grunn.ANNET": "Annet",
 
     "mottaker.ektefelle": "ektefelle",
     "mottaker.samboer": "samboer",
@@ -150,41 +150,41 @@
     "validation.annenForelderSituasjonBeskrivelse.stringIsTooLong": "Beskrivelse om hva som gjør at den andre forelderen ikke kan ha tilsyn med barn, kan ikke inneholde flere enn {maks} tegn.",
     "validation.annenForelderSituasjonBeskrivelse.stringIsTooShort": "Beskriv hva som gjør at den andre forelderen ikke kan ha tilsyn med barn, må inneholde minst {min} tegn.",
 
-    "validation.annenForelderPeriodeFom.dateHasNoValue.sykdom": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn fra.",
-    "validation.annenForelderPeriodeFom.dateHasNoValue.innlagtIHelseinstitusjon": "Du må oppgi hvilken dato innleggelsen gjelder fra.",
-    "validation.annenForelderPeriodeFom.dateHasNoValue.fengsel": "Du må oppgi hvilken dato soningen i fengsel gjelder fra.",
-    "validation.annenForelderPeriodeFom.dateHasNoValue.utøverVerneplikt": "Du må oppgi hvilken dato verneplikten utføres fra.",
-    "validation.annenForelderPeriodeFom.dateHasNoValue.annet": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn fra.",
+    "validation.annenForelderPeriodeFom.dateHasNoValue.SYKDOM": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn fra.",
+    "validation.annenForelderPeriodeFom.dateHasNoValue.INNLAGT_I_HELSEINSTITUSJON": "Du må oppgi hvilken dato innleggelsen gjelder fra.",
+    "validation.annenForelderPeriodeFom.dateHasNoValue.FENGSEL": "Du må oppgi hvilken dato soningen i fengsel gjelder fra.",
+    "validation.annenForelderPeriodeFom.dateHasNoValue.UTØVER_VERNEPLIKT": "Du må oppgi hvilken dato verneplikten utføres fra.",
+    "validation.annenForelderPeriodeFom.dateHasNoValue.ANNET": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn fra.",
 
-    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.sykdom": "Fra-datoen kan ikke være senere enn til-datoen.",
-    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.innlagtIHelseinstitusjon": "Fra-datoen kan ikke være senere enn til-datoen.",
-    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.fengsel": "Fra-datoen kan ikke være senere enn til-datoen.",
-    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.utøverVerneplikt": "Fra-datoen kan ikke være senere enn til-datoen.",
-    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.annet": "Fra-datoen kan ikke være senere enn til-datoen.",
+    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.SYKDOM": "Fra-datoen kan ikke være senere enn til-datoen.",
+    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.INNLAGT_I_HELSEINSTITUSJON": "Fra-datoen kan ikke være senere enn til-datoen.",
+    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.FENGSEL": "Fra-datoen kan ikke være senere enn til-datoen.",
+    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.UTØVER_VERNEPLIKT": "Fra-datoen kan ikke være senere enn til-datoen.",
+    "validation.annenForelderPeriodeFom.fromDateIsAfterToDate.ANNET": "Fra-datoen kan ikke være senere enn til-datoen.",
 
-    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.sykdom": "Du må oppgi fra hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.innlagtIHelseinstitusjon": "Du må oppgi fra hvilken dato gjelder innleggelsen i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.fengsel": "Du må oppgi fra hvilken dato gjelder soningen i fengsel i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.utøverVerneplikt": "Du må oppgi fra hvilken dato utføres verneplikten i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.annet": "Du må oppgi fra hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.SYKDOM": "Du må oppgi fra hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.INNLAGT_I_HELSEINSTITUSJON": "Du må oppgi fra hvilken dato gjelder innleggelsen i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.FENGSEL": "Du må oppgi fra hvilken dato gjelder soningen i fengsel i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.UTØVER_VERNEPLIKT": "Du må oppgi fra hvilken dato utføres verneplikten i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeFom.dateHasInvalidFormat.ANNET": "Du må oppgi fra hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
 
-    "validation.annenForelderPeriodeTom.dateHasNoValue.sykdom": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn til.",
-    "validation.annenForelderPeriodeTom.dateHasNoValue.innlagtIHelseinstitusjon": "Du må oppgi hvilken dato innleggelsen gjelder til.",
-    "validation.annenForelderPeriodeTom.dateHasNoValue.fengsel": "Du må oppgi hvilken dato soningen i fengsel gjelder til.",
-    "validation.annenForelderPeriodeTom.dateHasNoValue.utøverVerneplikt": "Du må oppgi hvilken dato verneplikten utføres til.",
-    "validation.annenForelderPeriodeTom.dateHasNoValue.annet": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn til. ",
+    "validation.annenForelderPeriodeTom.dateHasNoValue.SYKDOM": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn til.",
+    "validation.annenForelderPeriodeTom.dateHasNoValue.INNLAGT_I_HELSEINSTITUSJON": "Du må oppgi hvilken dato innleggelsen gjelder til.",
+    "validation.annenForelderPeriodeTom.dateHasNoValue.FENGSEL": "Du må oppgi hvilken dato soningen i fengsel gjelder til.",
+    "validation.annenForelderPeriodeTom.dateHasNoValue.UTØVER_VERNEPLIKT": "Du må oppgi hvilken dato verneplikten utføres til.",
+    "validation.annenForelderPeriodeTom.dateHasNoValue.ANNET": "Du må oppgi hvilken dato den andre forelderen ikke kan ta seg av barn til. ",
 
-    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.sykdom": "Til-datoen kan ikke være tidligere enn fra-datoen.",
-    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.innlagtIHelseinstitusjon": "Til-datoen kan ikke være tidligere enn fra-datoen.",
-    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.fengsel": "Til-datoen kan ikke være tidligere enn fra-datoen.",
-    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.utøverVerneplikt": "Til-datoen kan ikke være tidligere enn fra-datoen.",
-    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.annet": "Til-datoen kan ikke være tidligere enn fra-datoen.",
+    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.SYKDOM": "Til-datoen kan ikke være tidligere enn fra-datoen.",
+    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.INNLAGT_I_HELSEINSTITUSJON": "Til-datoen kan ikke være tidligere enn fra-datoen.",
+    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.FENGSEL": "Til-datoen kan ikke være tidligere enn fra-datoen.",
+    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.UTØVER_VERNEPLIKT": "Til-datoen kan ikke være tidligere enn fra-datoen.",
+    "validation.annenForelderPeriodeTom.toDateIsBeforeFromDate.ANNET": "Til-datoen kan ikke være tidligere enn fra-datoen.",
 
-    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.sykdom": "Du må oppgi til hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.innlagtIHelseinstitusjon": "Du må oppgi til hvilken dato gjelder innleggelsen i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.fengsel": "Du må oppgi til hvilken dato gjelder soningen i fengsel i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.utøverVerneplikt": "Du må oppgi til hvilken dato utføres verneplikten i et gyldig format. Gyldig format er dd.mm.åååå.",
-    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.annet": "Du må oppgi til hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.SYKDOM": "Du må oppgi til hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.INNLAGT_I_HELSEINSTITUSJON": "Du må oppgi til hvilken dato gjelder innleggelsen i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.FENGSEL": "Du må oppgi til hvilken dato gjelder soningen i fengsel i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.UTØVER_VERNEPLIKT": "Du må oppgi til hvilken dato utføres verneplikten i et gyldig format. Gyldig format er dd.mm.åååå.",
+    "validation.annenForelderPeriodeTom.dateHasInvalidFormat.ANNET": "Du må oppgi til hvilken dato er den andre forelderen ute av stand til å ha tilsyn med barn i et gyldig format. Gyldig format er dd.mm.åååå.",
 
     "validation.annenForelderPeriodeMer6Maneder.yesOrNoIsUnanswered": "Du må svare om perioden er på minst 6 måneder eller ikke.",
 
