Endret Ditt NAV

--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -125,6 +125,5 @@
     "kvittering.info.tittel": "Kva skjer vidare no?",
     "kvittering.info.1": "Vi behandlar søknaden frå deg om ekstra omsorgsdagar.",
     "kvittering.info.2": "Vi kontaktar deg dersom vi treng fleire opplysningar frå deg.",
-    "kvittering.info.3a": "Når vi har behandla søknaden din, får du eit svar frå oss i posten og på",
-    "kvittering.info.3b": "Ditt NAV"
+    "kvittering.info.3a": "Når vi har behandla søknaden din, får du eit svar frå oss i posten og på"
 }
