--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -131,9 +131,8 @@
     "kvittering.info.tittel": "Hva skjer videre nå?",
     "kvittering.info.1": "Vi behandler søknaden din.",
     "kvittering.info.2": "Vi kontakter deg hvis vi trenger flere opplysninger.",
-    "kvittering.info.3a": "Når søknaden er ferdigbehandlet, får du et svar fra oss på «Min side». Du kan se",
-    "kvittering.info.3b": "saksbehandlingstiden",
-    "kvittering.info.3c": "for ditt fylke her.",
+    "kvittering.info.3a": "Når søknaden er ferdigbehandlet, får du et svar fra oss på «Min side».",
+    "kvittering.info.3b": "Du kan sjekke saksbehandlingstiden her.",
 
     "validation.harForståttRettigheterOgPlikter.notChecked": "Du må bekrefte at du har lest og forstått dine plikter.",
 
